federacion/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: db
